# FLAME-ICU

./: .gitignore  README.md  claude.md  clif_config.json  flame_icu_visualizations.html  outlier_config.json  ppt.md  pyproject.toml  requirements.txt  run_full_preprocessing.sh  run_full_training.sh  run_preprocessing.sh  setup.bat  stage.md
code/: 01_cohort.ipynb  02_feature_engineering.ipynb  03_01_lstm_model.py  03_02_xgbmodel.py  03_lstm_model.py  04_inference.py  04_lstm_inference.py  04_xgb_inference.py  05_lstm_transfer_learning.py  05_transfer_learning.py  05_xgb_transfer_learning.py  06_wuperr_sequential_train.py  07_simulate_multisite.py  08_wuperr_evaluate.py  Inference_py.ipynb  README.md  config_demo.json  prd.md
code/approach1_cross_site/: README.md  approach_1_config.json  approach_1_utils.py
code/approach2_transfer_learning/: README.md  approach_2_config.json  approach_2_utils.py
code/approach3_independent/: approach_3_config.json  approach_3_utils.py
code/approach4_round_robin/: README.md
code/configs/: config_demo.json  sites.json  temporal_config.json
code/preprocessing/: 00_scan_tables.py  01_cohort.ipynb  01_cohort.py  02_feature_assmebly.py  02_feature_engineering.ipynb  02_feature_engineering.py  03_dataset_statistics.ipynb  03_dataset_statistics.py  03_hourly_qc.py  03_hourly_qc_deprecated.py  03_qc_heatmap.py  04_feature_consolidation.py  04_vitals_hourly_coverage.py  config.json  config_demo.json  config_helper.py  (+6 more)
legacy_venv_making/: requirements.txt  setup.sh
model/: lstm_icu_mortality_model.pt  xgb_feature_scaler.pkl
(+90 files in other folders)
