[project]
name = "flame-icu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair",
    "arrow",
    "DateTime",
    "duckdb",
    "ipykernel",
    "ipython",
    "jupyter",
    "marimo",
    "matplotlib",
    "matplotlib-inline",
    "nbclient",
    "nbconvert",
    "nbformat",
    "numpy",
    "pandas",
    "papermill",
    "plotly",
    "polars",
    "pyarrow",
    "pytz",
    "requests",
    "scipy",
    "seaborn",
    "tqdm",
    "clifpy",
    "torch",
    "xgboost",
    "scikit-learn",
    "optuna>=4.5.0",
    "watchdog>=6.0.0",
    "ruff>=0.13.3",
]
